tests/errors/semantic/E007_base.zy
# E007_base {
    #> { PI }

    PI := 3.14
}
